# templates

./: README.md  groups  project.config
PyQt4Template/: README.md  main.py
PyQt4Template/utilities/: __init__.py
PyQt4Template/widgets/: mainwindow.py
PyQt5Template/: LICENSE  README.md  main.py
PyQt5Template/ui/: mainwindow.ui
PyQt5Template/utilities/: __init__.py
PyQt5Template/widgets/: mainwindow.py
cmake/gtest/: CMakeLists.txt
cmake/project/: CMakeLists.txt
debian/: README  changelog  control  copyright
md/: README.md
repo_template/: README.md  new-platypus-project.sh
